# RustDemoService

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  build.gradle.kts  docker-compose.yml  docker-notes.txt  gradle.properties  justfile  package-lock.json  package.json  settings.gradle.kts
.cursor/rules/: catalog-client-generated.mdc  catalog-svc-regenerate-client.mdc  smithy-rust-types.mdc
.github/workflows/: build.yml  docker-push.yml  github-actions-demo.yml  rust.yml
catalog-svc/: .gitignore  generate-client.sh  generate-openapi.sh  settings.gradle.kts
catalog-svc-smithy/client/: Cargo.toml  build.gradle.kts  smithy-build.json
catalog-svc-smithy/client/src/: main.rs
catalog-svc-smithy/server/: Cargo.toml  build.gradle.kts  smithy-build.json
catalog-svc-smithy/server/src/: lib.rs  main.rs
catalog-svc-smithy/server/src/server/: dtos.rs  errors.rs  mod.rs
catalog-svc-smithy/smithy/model/: common.smithy  main.smithy
catalog-svc-utoipa/service/: Cargo.toml  config.toml
catalog-svc-utoipa/service/src/: lib.rs  main.rs
catalog-svc-utoipa/service/src/catalog/api/: mod.rs
catalog-svc-utoipa/service/src/http_server/: mod.rs
catalog-svc-utoipa/service/src/service/: mod.rs
catalog-svc/catalog-client-ts/: openapi-ts.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
catalog-svc/catalog-client-ts/src/: index.ts
catalog-svc/catalog-svc/: Cargo.toml  config.toml
catalog-svc/catalog-svc-client/: Cargo.toml  build.rs
catalog-svc/catalog-svc/migrations/: 20250303120000_create_catalog_items.sql
catalog-svc/catalog-svc/src/: app_config.rs  config.rs  lib.rs  main.rs  server.rs
catalog-svc/catalog-svc/src/catalog/: mod.rs  repository.rs
catalog-svc/catalog-svc/src/catalog/api/: mod.rs
catalog-svc/catalog-svc/src/catalog/persistence/: mod.rs
catalog-svc/catalog-svc/src/catalog/service/: mod.rs
catalog-svc/catalog-svc/src/common/: pagination.rs
catalog-svc/catalog-svc/src/http_server/: mod.rs
catalog-svc/catalog-svc/tests/: catalog_crud.rs  catalog_migration_schema.rs  kafka_example.rs
catalog-svc/client/: Cargo.toml  build.gradle.kts  build.rs
catalog-svc/server/: Cargo.toml  build.gradle.kts
catalog-svc/server/src/: lib.rs  main.rs
catalog-svc/server/src/server/: mod.rs
catalog-svc/service/: Cargo.toml
catalog-svc/service/src/: config.rs  main.rs  server.rs
catalog-svc/service/src/catalog/service/: mod.rs
catalog-svc/service/src/http_server/: mod.rs
catalog-svc/service/tests/: catalog_crud.rs
catalog-svc/smithy/: build.gradle.kts
catalog-svc/smithy/model/: common.smithy  main.smithy
commons/: Cargo.toml
commons/src/: lib.rs
commons/src/util/: app.rs  mod.rs  server.rs  tests.rs  tracing.rs
demo-notes/: .gitignore  Cargo.toml  generate-client.sh
demo-notes/service/: Cargo.toml
demo-notes/service/src/: main.rs
demo-notes/service/src/api/: mod.rs
demo-notes/service/src/http_server/: mod.rs
demo-notes/service/src/service/: mod.rs
demo-notes/src/: main.rs
demo-notes/src/api/: mod.rs
demo-notes/src/http_server/: mod.rs
demo-notes/src/service/: mod.rs
demo-notes2/: settings.gradle.kts
demo-notes2/client/: build.gradle.kts
demo-notes2/server/: build.gradle.kts
demo_svc/: Cargo.toml  build.rs
demo_svc/src/: app_util.rs  axum_example.rs  lib.rs  main.rs  service.rs
demo_svc/src/accounts/: api.rs  mod.rs  service.rs  web.rs  webapp.rs  webclient.rs
demo_svc/src/service/: accounts.rs
demo_svc/tests/: accounts.rs  kafka.rs  kafka_example.rs  lifetimes.rs  persistence.rs  snippets.rs  sql.rs
domain-tx/: Cargo.toml
domain-tx/src/: lib.rs
frontend/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  CatalogItemApiExample.css  CatalogItemApiExample.tsx  main.tsx
helloworld-tonic/: Cargo.toml
helloworld-tonic/src/: client.rs  server.rs
snippets/: Cargo.toml
snippets/src/: error_handling.rs  error_modelling_approaches.rs  json.rs  lib.rs  lifetimes.rs  trait_objects.rs  uri.rs
snippets/tests/: common.rs  tracing.rs
tx-model/: Cargo.toml
