[workspace]

resolver = "3"

members = [
    "commons",
    "snippets",
    "demo_svc",
    "catalog-svc-smithy/server",
    "catalog-svc-smithy/client",
    "catalog-svc/service",
    "helloworld-tonic",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.94"
async-trait = "0.1.85"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
config = "0.14"
http = "0.2"
hyper = { version = "0.14", features = ["server"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.42", features = ["full"] }
thiserror = "2.0"
tower = "0.5.2"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
utoipa = { version = "5", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }