[package]
name = "rust-demo-commons"
version = "0.1.0"
edition = "2021"
description = "common code. TODO: DRY dependency versions"


[dependencies]
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.94"

chrono = "0.4.39"

uuid = { version = "0.8.2" , features = ["v4"]}