[package]
name = "rust-demo-commons"
version = "0.1.0"
edition = "2021"
description = "common code."

[features]
test-utils = [ "time/local-offset", "time/macros" ]

[dependencies]
anyhow.workspace = true

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

time = { version = "0.3", optional = true }
