[package]
name = "rust-snippets"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
thiserror = "2.0.12"

time = { version = "0.3", features = ["local-offset", "macros"] }
serde = { version = "1.0.216", features = ["derive"] }
uuid.workspace = true
url = "2.5.4"
http = "1.2.0"
reqwest = "0.12.22"

tokio = { version = "1.42", features = ["full"] }


