[package]
name = "catalog-svc-server"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# generated server SDK
catalog_api = { path = "./build/smithyprojections/server/source/rust-server-codegen" }

# application service implementation
catalog_svc = { path = "../../catalog-svc/service", package = "catalog-svc" }
