[package]
name = "catalog-svc-smithy-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-demo-commons = { workspace = true, features = ["test-utils"] }
hyper = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }

# generated server SDK
catalog_api = { path = "./build/smithyprojections/server/source/rust-server-codegen" }

# application service implementation
catalog-svc.workspace = true
