[package]
name = "catalog-svc-utoipa"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
config = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }

[[bin]]
name = "dump-openapi"
path = "src/bin/dump_openapi.rs"
