[package]
name = "catalog-svc-client"
version = "0.1.0"
edition = "2021"
license = "SPECIFY A LICENSE BEFORE PUBLISHING"

[dependencies]
progenitor-client = "0.13.0"
reqwest = { version = "0.13", features = ["json", "query", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0.0", features = ["serde", "v4"] }

[build-dependencies]
prettyplease = "0.2.22"
progenitor = "0.13.0"
serde_json = "1.0"
syn = "2.0"
