[package]
name = "catalog-svc-server"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
config = "0.14"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
http = "0.2"
hyper = { version = "0.14", features = ["server"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v4"] }

# generated server SDK
catalog_api = { path = "./build/smithyprojections/server/source/rust-server-codegen" }
