[package]
name = "catalog-svc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
rust-demo-commons = { path = "../../commons", features = ["test-utils"] }
thiserror = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["compat"] }
tracing = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
catalog-svc-client = { path = "../client" }

[[bin]]
name = "dump-openapi"
path = "src/bin/dump_openapi.rs"
